2013-02-06  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c (RunIns): Slightly beautify output.
	(Usage): Mention help key.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Make it work again (partially).

	Since we now have lazy execution of the `prep' bytecode, the old
	ttdebug code no longer could debug it.

	The new code debugs `fpgm', `prep', and the glyph's bytecode in one
	run.  To facilitate it,  it also adds a new `c' key to continue to
	the next code range.

	* src/ttdebug.c (debug_coderange): Removed.
	(RunIns): Always run debugger.
	Report `end of program' only after glyph program.
	Update output of `?' key.
	Handle `c' key to loop until end of code range is reached.
	(Usage): Updated.
	(main): Don't handle negative glyph indices.

2013-02-06  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c: s/exc->/CUR./.

2013-02-05  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c (OpStr): Oops!  Add commas back.

2013-02-05  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Fix compilation warnings.

	* src/ttdebug.c (Cur_U_Line): Use `CUR' macro.
	(RunIns): Use global `error' variable.
	Use a const `temp' pointer locally.
	(Usage): Fix declaration.

2013-02-05  Werner Lemberg  <wl@gnu.org>

	* src/ttdebug.c: Formatting, improving messages.

2013-01-28  Werner Lemberg  <wl@gnu.org>

	[ftview] Make waterfall display -m string.

	Also make leftArrow key and friends functional.

	* src/ftview.c (Text): Make it `const char*'.
	(Render_Waterfall): Add argument to pass first index.
	Use -m option if given, and handle it as UTF-8.
	(Render_Text, parse_cmdline, main): Updated.

2013-01-28  Werner Lemberg  <wl@gnu.org>

	* src/ftview.c (write_header): Show rendering mode number.

2013-01-03  Werner Lemberg  <wl@gnu.org>

	[ftdiff] Slightly redesign layout to display all options.

	Also some other, minor changes.

	* src/ftdiff.c: Include <string.h>.
	(RenderStateRec): Remove `message' and `message0'.
	Update all users.